--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,11 +1,18 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-    </h:body>
-</html>
+<!DOCTYPE html>
+    <html xmlns="http://www.w3.org/1999/xhtml"
+          xmlns:h="http://xmlns.jcp.org/jsf/html"
+          xmlns:f="http://xmlns.jcp.org/jsf/core">
+        <h:head>
+            <title>Prueba JSF</title>
+        </h:head>
+        <h:body>
+            <h:form>
+                <h:inputText value="#{saludoBean.nombre}"/>
+                <br></br>
+                <hr></hr>
+                <h:inputText value="#{saludoBean.prueba}"/>
+                <h:commandButton value="Sal" action="#{saludoBean.saludar}"></h:commandButton>
+                <h:outputText value="#{saludoBean.mensaje}" style="margin-left:10px;" />
+            </h:form>
+        </h:body>
+    </html>
